This repository contains a task management application built with Jekyll and GitHub Pages, featuring automated workflows for deployment and issue management.
* Added a new section "GitHub Actions Workflows" in `README.md` to describe the purpose of the workflows in the repository.
* Added subsections "Deploy Jekyll with GitHub Pages" and "Mark stale issues and pull requests" in `README.md` to explain the functionality of the `jekyll-gh-pages.yml` and `stale.yml` workflows, respectively.
* Added comments in `.github/workflows/jekyll-gh-pages.yml` to explain the purpose of the workflow and each step in the `build` and `deploy`

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   stale:
-
+    # This job runs on the latest version of Ubuntu
     runs-on: ubuntu-latest
     permissions:
       issues: write
