Add a step to output the build result to a local directory
* Add a new step in the `docker-build.yml` workflow to output the build result to a specified local directory using `buildctl`.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -76,3 +76,11 @@ jobs:
             --output type=image,name=docker.io/username/image,push=true \
             --export-cache type=inline \
             --import-cache type=registry,ref=docker.io/username/image
+
+      - name: Output build result to local directory
+        run: |
+          buildctl build \
+            --frontend=dockerfile.v0 \
+            --local context=. \
+            --local dockerfile=. \
+            --output type=local,dest=path/to/output-dir
