Add a step to output the build result as a Docker image compatible with OCI spec
* Add a new step to run `buildctl build` with `--output type=docker,name=myimage` and pipe the result to `docker load`

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -109,3 +109,11 @@ jobs:
             --local context=. \
             --local dockerfile=. \
             --output type=tar > out.tar
+
+      - name: Output build result as Docker image compatible with OCI spec
+        run: |
+          buildctl build \
+            --frontend=dockerfile.v0 \
+            --local context=. \
+            --local dockerfile=. \
+            --output type=docker,name=myimage | docker load
