Add a step to display disk usage information in `docker-build.yml` workflow
* Add a new step to run `buildctl du -v` to display disk usage information

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -126,3 +126,7 @@ jobs:
             --local dockerfile=. \
             --output type=image,name=docker.io/username/image
           ctr --namespace=buildkit images ls
+
+      - name: Display disk usage information
+        run: |
+          buildctl du -v
