--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -130,3 +130,7 @@ jobs:
       - name: Display disk usage information
         run: |
           buildctl du -v
+
+      - name: Clean up unused build cache
+        run: |
+          buildctl prune
